feat: changing video upload endpoint to work with polling
